bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: type mismatch;
 found   : Int
 required: Boolean
  return Math.abs(100-n) <= 10 || Math.abs(200-n)
                                          ^